# dollar

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
include/: dollar.hpp
src/: dollar.cpp
test/: test.cpp
